[project]
name = "intact_plot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luggi003", email = "al3320@mci4me.at"},
]
dependencies = ["pandas>=3.0.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
